@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLPROTO_SMB and CURLPROTO_SMBS constants (libcurl 7.40.0+).
+
         * Added CURL_SOCKOPT_* constants (libcurl 7.21.5+).
 
         * Added CURL_HTTP_VERSION_2_0, CURL_HTTP_VERSION_2 and
